--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -4,7 +4,15 @@
       <speak.logout argsType="Sitecore.Pipelines.Logout.LogoutArgs">
         <processor type="Feature.Wealth.Account.Pipelines.SingleSignOut, Feature.Wealth.Account" mode="on" />
       </speak.logout>
+
+      <owin.cookieAuthentication.signedIn>
+        <processor resolve="true" type="Feature.Wealth.Account.Pipelines.Owin.CookieAuthentication.SignedIn.LoginTracker, Feature.Wealth.Account" patch:after="processor[@type='Sitecore.Owin.Authentication.Pipelines.CookieAuthentication.SignedIn.CleanupUserProfile, Sitecore.Owin.Authentication']" />
+      </owin.cookieAuthentication.signedIn>
+      <owin.cookieAuthentication.signOut>
+        <processor resolve="true" type="Feature.Wealth.Account.Pipelines.Owin.CookieAuthentication.SignOut.LogoutTracker, Feature.Wealth.Account" patch:after="processor[@type='Sitecore.Owin.Authentication.Pipelines.CookieAuthentication.SignOut.ClearCache, Sitecore.Owin.Authentication']" />
+      </owin.cookieAuthentication.signOut>
     </pipelines>
+
     <processors role:require="Standalone or ContentManagement" environment:require="Local or Staging or Production">
       <logout argsType="Sitecore.Pipelines.Logout.LogoutArgs">
         <processor patch:before="processor[@type='Sitecore.Pipelines.Logout.GotoLogin, Sitecore.Kernel']" type="Feature.Wealth.Account.Pipelines.SingleSignOut, Feature.Wealth.Account" mode="on" />
@@ -97,7 +105,7 @@
         <patch:attribute  name="value" environment:require="Local or Development or Staging">https://ibanktest.firstbank.com.tw/apppay/request/0202.do</patch:attribute>
         <patch:attribute  name="value" environment:require="Production">https://ibank.firstbank.com.tw/apppay/request/0202.do</patch:attribute>
       </setting>
-      <setting name="WebBank.CallBackUrl" value="/api/client/Accounts/SignInWebBank?sc_lang=zh-TW&amp;sc_site=wealth-zh-hant">        
+      <setting name="WebBank.CallBackUrl" value="/api/client/Accounts/SignInWebBank?sc_lang=zh-TW&amp;sc_site=wealth-zh-hant">
       </setting>
       <!--第e行動&&iLeo登入deeplink-->
       <setting name="MobileFirste" value="https://fcblink.page.link/?link=https%3A%2F%2Ffcblink.page.link%2FI11%3Fchannel%3Dwms%26returnUrl%3Dwww.google.com.tw&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank">
