add: 登入狀態識別/建立聯繫人，後台數位軌跡

--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -40,6 +40,11 @@
         <patch:attribute name="content">master</patch:attribute>
       </site>
     </sites>
+    <pipelines role:require="Standalone or ContentDelivery">
+      <mvc.requestBegin>
+        <processor patch:after="processor[@type='Sitecore.Mvc.Analytics.Pipelines.MvcEvents.RequestBegin.StartTracking, Sitecore.Mvc.Analytics']" type="Feature.Wealth.Account.Pipelines.XConnect, Feature.Wealth.Account" resolve="true"/>
+      </mvc.requestBegin>
+    </pipelines>
     <settings>
       <setting name="Feature.Wealth.Account.SSO.LogoutUrl" value="https://am.firstbank.com.tw/AGLogout">
         <patch:attribute name="value" environment:require="Staging">https://am5test.firstbank-tt.com.tw/AGLogout</patch:attribute>
