update:加入國外債卷申購deeplink

--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -83,6 +83,18 @@
         <patch:attribute name="value" environment:require="Local or Development or Staging">https://fcbileodev.page.link/?link=https%3A%2F%2Ffcbileodev.page.link%2FFundETFBuy%3FFundCode%3D代碼&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite.DEV</patch:attribute>
         <patch:attribute name="value" environment:require="Production">https://fcbileo.page.link/?link=https%3A%2F%2Ffcbileo.page.link%2FFundETFBuy%3FFundCode%3D代碼&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
       </setting>
+      <!--國外債卷-第e個網-->
+      <setting name="WebBond">
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://ibanktest.firstbank.com.tw/NetBank/6/03010101_redirect.html</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://ibank.firstbank.com.tw/NetBank/6/03010101_redirect.html</patch:attribute>
+      </setting>
+      <!--國外債卷申購-第e行動-->
+      <setting name="MobileBond" value="https://fcblink.page.link/?link=https://fcblink.page.link/F20"/>
+      <!--國外債卷申購-iLeo-->
+      <setting name="IleoBond">
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://fcbileodev.page.link/?link=https%3A%2F%2Ffcbileodev.page.link%2FFundFrnBond&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite.apnDEV</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://fcbileo.page.link/?link=https%3A%2F%2Ffcbileo.page.link%2FFundFrnBond&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
+      </setting>
       <!--幣別iframe-->
       <setting name="CurrencyWebSite">
         <patch:attribute name="value" environment:require="Local or Development or Staging">https://mobiletest.firstbank.com.tw/c1/cheetah/zh/07/currency</patch:attribute>
