--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -137,6 +137,18 @@
         <patch:attribute name="value" environment:require="Local or Development or Staging">https://weamvp.firstbank-tt.com.tw:8443</patch:attribute>
         <patch:attribute name="value" environment:require="Production">https://weamvp.firstbank.com.tw:8443</patch:attribute>
       </setting>
+      <setting name="JwtIssuer">
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://weamvp.firstbank-tt.com.tw:8443</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://weamvp.firstbank.com.tw:8443</patch:attribute>
+      </setting>
+      <setting name="JwtAudience">
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://weamvp.firstbank-tt.com.tw:8443</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://weamvp.firstbank.com.tw:8443</patch:attribute>
+      </setting>
+      <setting name="JwtSecretKey">
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://weamvp.firstbank-tt.com.tw:8443</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://weamvp.firstbank.com.tw:8443</patch:attribute>
+      </setting>
     </settings>
   </sitecore>
 </configuration>
