--- a/Packages.props
+++ b/Packages.props
@@ -94,5 +94,8 @@
     <PackageReference Update="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.0" />
     <PackageReference Update="Microsoft.Extensions.Http" Version="3.1.1" />
     <PackageReference Update="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+
+    <!-- === authorize -->
+
   </ItemGroup>
 </Project>
