IMVP API增加驗證機制 JWT Authorization

--- a/src/Foundation/Wealth/platform/Foundation.Wealth.csproj
+++ b/src/Foundation/Wealth/platform/Foundation.Wealth.csproj
@@ -12,5 +12,6 @@
     <PackageReference Include="MailKit" />
     <PackageReference Include="Oracle.ManagedDataAccess" />
     <PackageReference Include="FluentFTP" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" />
   </ItemGroup>
 </Project>
