--- a/Packages.props
+++ b/Packages.props
@@ -96,6 +96,10 @@
     <PackageReference Update="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
 
     <!-- === authorize -->
+    <PackageReference Update="System.IdentityModel.Tokens.Jwt" Version="6.34.0" />
+    <PackageReference Update="Microsoft.IdentityModel.JsonWebTokens" Version="6.34.0" />
+    <PackageReference Update="Microsoft.IdentityModel.Tokens" Version="6.34.0" />
+    <PackageReference Update="Microsoft.IdentityModel.Logging" Version="6.34.0" />
 
   </ItemGroup>
 </Project>
