--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -137,6 +137,14 @@
         <patch:attribute name="value" environment:require="Local or Development or Staging">https://weamvp.firstbank-tt.com.tw:8443</patch:attribute>
         <patch:attribute name="value" environment:require="Production">https://weamvp.firstbank.com.tw:8443</patch:attribute>
       </setting>
+      <setting name="OctonApiTenant">
+        <patch:attribute name="value" environment:require="Local or Development or Staging">YJI304</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">YJI304</patch:attribute>
+      </setting>
+      <setting name="OctonApiSysCode">
+        <patch:attribute name="value" environment:require="Local or Development or Staging">Octon</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">Octon</patch:attribute>
+      </setting>
       <setting name="JwtIssuer">
         <patch:attribute name="value" environment:require="Local or Development or Staging">https://wealth.firstbank-tt.com.tw</patch:attribute>
         <patch:attribute name="value" environment:require="Production">https://wealth.firstbank.com.tw</patch:attribute>
