--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -145,6 +145,10 @@
         <patch:attribute name="value" environment:require="Local or Development or Staging">Octon</patch:attribute>
         <patch:attribute name="value" environment:require="Production">Octon</patch:attribute>
       </setting>
+      <setting name="OctonApiDNISList">
+        <patch:attribute name="value" environment:require="Local or Development or Staging">1003,1004,1005,1006,1007</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">1003,1004,1005,1006,1007</patch:attribute>
+      </setting>
       <setting name="JwtIssuer">
         <patch:attribute name="value" environment:require="Local or Development or Staging">https://wealth.firstbank-tt.com.tw</patch:attribute>
         <patch:attribute name="value" environment:require="Production">https://wealth.firstbank.com.tw</patch:attribute>
