update : 嘉實api 非200 log紀錄 &&catch exception log統一

--- a/src/Foundation/Wealth/platform/Foundation.Wealth.csproj
+++ b/src/Foundation/Wealth/platform/Foundation.Wealth.csproj
@@ -13,5 +13,7 @@
     <PackageReference Include="Oracle.ManagedDataAccess" />
     <PackageReference Include="FluentFTP" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" />
+    <PackageReference Include="Flurl" />
+    <PackageReference Include="Flurl.Http" />
   </ItemGroup>
 </Project>
