--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -138,8 +138,8 @@
         <patch:attribute name="value" environment:require="Production">https://weamvp.firstbank.com.tw:8443</patch:attribute>
       </setting>
       <setting name="OctonApiTenant">
-        <patch:attribute name="value" environment:require="Local or Development or Staging">YJI304</patch:attribute>
-        <patch:attribute name="value" environment:require="Production">YJI304</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">WEA072</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">WEA072</patch:attribute>
       </setting>
       <setting name="OctonApiSysCode">
         <patch:attribute name="value" environment:require="Local or Development or Staging">Octon</patch:attribute>
