Update: 紅綠燈總開關config開

--- a/src/Feature/ScheduleAgent/platform/App_Config/Include/Feature/Feature.Wealth.ScheduleAgent/Feature.Wealth.ScheduleAgent.config
+++ b/src/Feature/ScheduleAgent/platform/App_Config/Include/Feature/Feature.Wealth.ScheduleAgent/Feature.Wealth.ScheduleAgent.config
@@ -9,9 +9,9 @@
         <patch:attribute name="value" environment:require="Staging">wealth.firstbank-tt.com.tw</patch:attribute>
         <patch:attribute name="value" environment:require="Production">wealth.firstbank.com.tw</patch:attribute>
       </setting>
-      <setting name="MasterLightSwitch"  role:require="ContentManagement">
-        <patch:attribute name="value" environment:require="Local or Development">false</patch:attribute>
-        <patch:attribute name="value" environment:require="Production">false</patch:attribute>
+      <setting name="MasterLightSwitch">
+        <patch:attribute name="value" environment:require="Local or Development or Staging">true</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">true</patch:attribute>
       </setting>
     </settings>
   </sitecore>
