#4706 正式環境後台自動登出 設置成10分鐘

--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -54,6 +54,11 @@
       </mvc.requestBegin>
     </pipelines>
     <settings>
+      <setting name="Authentication.ClientSessionTimeout">
+        <patch:attribute name="value" environment:require="Local or Development">180</patch:attribute>
+        <patch:attribute name="value" environment:require="Staging">10</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">10</patch:attribute>
+      </setting>
       <setting name="Feature.Wealth.Account.SSO.LogoutUrl" value="https://am.firstbank.com.tw/AGLogout">
         <patch:attribute name="value" environment:require="Staging">https://am5test.firstbank-tt.com.tw/AGLogout</patch:attribute>
       </setting>
@@ -90,20 +95,20 @@
       <setting name="Line.VerifyUrl" value="https://api.line.me/oauth2/v2.1/verify"/>
       <!--一銀網銀登入AppAay資訊-->
       <setting name="AppPay.Id">
-        <patch:attribute  name="value" environment:require="Local or Development or Staging">WEALTH</patch:attribute>
-        <patch:attribute  name="value" environment:require="Production">WEALTH</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">WEALTH</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">WEALTH</patch:attribute>
       </setting>
       <setting name="AppPay.Key">
-        <patch:attribute  name="value" environment:require="Local or Development or Staging">gIVNc3DU7ln9yJEclqPY</patch:attribute>
-        <patch:attribute  name="value" environment:require="Production">HcNFUSi9G2agXcg6V6Ks</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">gIVNc3DU7ln9yJEclqPY</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">HcNFUSi9G2agXcg6V6Ks</patch:attribute>
       </setting>
       <setting name="AppPay.VerifyUrl">
-        <patch:attribute  name="value" environment:require="Local or Development or Staging">https://10.14.84.3/apppay/request/0201.do</patch:attribute>
-        <patch:attribute  name="value" environment:require="Production">https://10.20.10.43/apppay/request/0201.do</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://10.14.84.3/apppay/request/0201.do</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://10.20.10.43/apppay/request/0201.do</patch:attribute>
       </setting>
       <setting name="AppPay.CallLoginUrl">
-        <patch:attribute  name="value" environment:require="Local or Development or Staging">https://ibanktest.firstbank.com.tw/apppay/request/0202.do</patch:attribute>
-        <patch:attribute  name="value" environment:require="Production">https://ibank.firstbank.com.tw/apppay/request/0202.do</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://ibanktest.firstbank.com.tw/apppay/request/0202.do</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://ibank.firstbank.com.tw/apppay/request/0202.do</patch:attribute>
       </setting>
       <setting name="WebBank.CallBackUrl" value="/api/client/Accounts/SignInWebBank?sc_lang=zh-TW&amp;sc_site=wealth-zh-hant">
       </setting>
