--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -4,15 +4,7 @@
       <speak.logout argsType="Sitecore.Pipelines.Logout.LogoutArgs">
         <processor type="Feature.Wealth.Account.Pipelines.SingleSignOut, Feature.Wealth.Account" mode="on" />
       </speak.logout>
-
-      <owin.cookieAuthentication.signedIn>
-        <processor resolve="true" type="Feature.Wealth.Account.Pipelines.Owin.CookieAuthentication.SignedIn.LoginTracker, Feature.Wealth.Account" patch:after="processor[@type='Sitecore.Owin.Authentication.Pipelines.CookieAuthentication.SignedIn.CleanupUserProfile, Sitecore.Owin.Authentication']" />
-      </owin.cookieAuthentication.signedIn>
-      <owin.cookieAuthentication.signOut>
-        <processor resolve="true" type="Feature.Wealth.Account.Pipelines.Owin.CookieAuthentication.SignOut.LogoutTracker, Feature.Wealth.Account" patch:after="processor[@type='Sitecore.Owin.Authentication.Pipelines.CookieAuthentication.SignOut.ClearCache, Sitecore.Owin.Authentication']" />
-      </owin.cookieAuthentication.signOut>
     </pipelines>
-
     <processors role:require="Standalone or ContentManagement" environment:require="Local or Staging or Production">
       <logout argsType="Sitecore.Pipelines.Logout.LogoutArgs">
         <processor patch:before="processor[@type='Sitecore.Pipelines.Logout.GotoLogin, Sitecore.Kernel']" type="Feature.Wealth.Account.Pipelines.SingleSignOut, Feature.Wealth.Account" mode="on" />
@@ -52,6 +44,14 @@
       <mvc.requestBegin>
         <processor patch:after="processor[@type='Sitecore.Mvc.Analytics.Pipelines.MvcEvents.RequestBegin.StartTracking, Sitecore.Mvc.Analytics']" type="Feature.Wealth.Account.Pipelines.XConnect, Feature.Wealth.Account" resolve="true"/>
       </mvc.requestBegin>
+    </pipelines>
+    <pipelines role:require="Standalone or ContentManagement">
+      <owin.cookieAuthentication.signedIn>
+        <processor resolve="true" type="Feature.Wealth.Account.Pipelines.Owin.CookieAuthentication.SignedIn.LoginTracker, Feature.Wealth.Account" patch:after="processor[@type='Sitecore.Owin.Authentication.Pipelines.CookieAuthentication.SignedIn.CleanupUserProfile, Sitecore.Owin.Authentication']" />
+      </owin.cookieAuthentication.signedIn>
+      <owin.cookieAuthentication.signOut>
+        <processor resolve="true" type="Feature.Wealth.Account.Pipelines.Owin.CookieAuthentication.SignOut.LogoutTracker, Feature.Wealth.Account" patch:after="processor[@type='Sitecore.Owin.Authentication.Pipelines.CookieAuthentication.SignOut.ClearCache, Sitecore.Owin.Authentication']" />
+      </owin.cookieAuthentication.signOut>
     </pipelines>
     <settings>
       <setting name="Authentication.ClientSessionTimeout">
