--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -137,6 +137,10 @@
         <patch:attribute name="value" environment:require="Local or Development or Staging">https://weamvp.firstbank-tt.com.tw:8443</patch:attribute>
         <patch:attribute name="value" environment:require="Production">https://weamvp.firstbank.com.tw:8443</patch:attribute>
       </setting>
+      <setting name="OctonVideoApiRoute">
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://10.26.203.16:8443</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://10.20.3.110:8443</patch:attribute>
+      </setting>
       <setting name="OctonApiTenant">
         <patch:attribute name="value" environment:require="Local or Development or Staging">WEA072</patch:attribute>
         <patch:attribute name="value" environment:require="Production">WEA072</patch:attribute>
