Fund API white list

--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -151,6 +151,10 @@
       <!-- 全站搜尋商品列表-Cache過期時間-->
       <setting name="SiteProductSearchCacheTime" value="30m"/>
 
+      <setting name="ApiAllowedIps">
+        <patch:attribute name="value" environment:require="Local or Development or Staging"></patch:attribute>
+        <patch:attribute name="value" environment:require="Production"></patch:attribute>
+      </setting>
       <setting name="IMVPApiRoute">
         <patch:attribute name="value" environment:require="Local or Development or Staging">https://ta-sfa01-ap.firstbank.com.tw:9444</patch:attribute>
         <patch:attribute name="value" environment:require="Production">https://pa-sfa01-ap:9444</patch:attribute>
