--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -126,7 +126,7 @@
       <!-- 首頁搜尋元件-Cache過期時間-->
       <setting name="SearchBarCacheTime" value="30m"/>
       <setting name="IMVPApiRoute">
-        <patch:attribute name="value" environment:require="Local or Development or Staging">https://10.14.88.77:9444</patch:attribute>
+        <patch:attribute name="value" environment:require="Local or Development or Staging">https://ta-sfa01-ap.firstbank.com:9444</patch:attribute>
         <patch:attribute name="value" environment:require="Production">https://10.20.3.59:9444</patch:attribute>
       </setting>
       <setting name="IMVPSafeIP">
