Update : 調整首頁焦點新聞、市場頭條新聞、市場新聞搜尋取值方法、添加首頁焦點新聞 cache (cache 時間1分鐘)

--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -121,6 +121,8 @@
       </setting>
       <!-- 頭條新聞、新聞列表、新聞詳細-Cache過期時間-->
       <setting name="NewsCacheTime" value="30m"/>
+      <!-- 首頁焦點新聞-Cache過期時間-->
+      <setting name="HomeHeadlinesTime" value="1m"/>
       <!-- 結構型商品列表、結構型商品詳細-Cache過期時間-->
       <setting name="StructuredProductCacheTime" value="30m"/>
       <!-- 首頁搜尋元件-Cache過期時間-->
