--- a/src/Feature/Toolkit/platform/Feature.Wealth.Toolkit.csproj
+++ b/src/Feature/Toolkit/platform/Feature.Wealth.Toolkit.csproj
@@ -6,6 +6,9 @@
     <SitecoreRoleType>platform</SitecoreRoleType>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Areas\Tools\Views\CacheManager\keepalive.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectCapability Include="SupportsSystemWeb" />
   </ItemGroup>
   <ItemGroup>
