update: 登入串接使用資料庫方式

--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -121,6 +121,8 @@
       </setting>
       <!--壓力測試使用 ID-->
       <setting name="StressTestId" value="A1231231230"/>
+      <!--AppPay登入交易過程限時 分鐘-->
+      <setting name="LoginTansactionLimit" value="10"/>
     </settings>
   </sitecore>
 </configuration>
