Add:全商品搜尋頁、人氣排行，存取Cache

--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -127,6 +127,17 @@
       <setting name="StructuredProductCacheTime" value="30m"/>
       <!-- 首頁搜尋元件-Cache過期時間-->
       <setting name="SearchBarCacheTime" value="30m"/>
+      <!-- 基金商品列表-Cache過期時間-->
+      <setting name="FundSearchCacheTime" value="30m"/>
+      <!-- Etf商品列表-Cache過期時間-->
+      <setting name="EtfSearchCacheTime" value="30m"/>
+      <!-- 國外股票商品列表-Cache過期時間-->
+      <setting name="USStockSearchCacheTime" value="30m"/>
+      <!-- 國外債券商品列表-Cache過期時間-->
+      <setting name="BondSearchCacheTime" value="30m"/>
+      <!-- 全站搜尋商品列表-Cache過期時間-->
+      <setting name="SiteProductSearchCacheTime" value="30m"/>
+      
       <setting name="IMVPApiRoute">
         <patch:attribute name="value" environment:require="Local or Development or Staging">https://ta-sfa01-ap.firstbank.com.tw:9444</patch:attribute>
         <patch:attribute name="value" environment:require="Production">https://pa-sfa01-ap:9444</patch:attribute>
