Update：Sitecron Log Config設定

--- a/src/Project/Wealth/platform/App_Config/Include/Foundation/Xcms/Xcms.Sitecore.Foundation.QuartzSchedule.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Foundation/Xcms/Xcms.Sitecore.Foundation.QuartzSchedule.config
@@ -69,8 +69,8 @@
       <register serviceType="Xcms.Sitecore.Foundation.QuartzSchedule.Sitecron.Core.Scheduling.ISitecronScheduler, Xcms.Sitecore.Foundation.QuartzSchedule" implementationType="Xcms.Sitecore.Foundation.QuartzSchedule.Sitecron.Core.Scheduling.QuartzSitecronScheduler, Xcms.Sitecore.Foundation.QuartzSchedule" />
     </services>
     <log4net>
-      <appender name="SitecronLogFileAppender" type="log4net.Appender.RollingFileAppender, Sitecore.Logging">
-        <file value="$(dataFolder)/logs/Sitecron.log" />
+      <appender name="SitecronLogFileAppender" type="log4net.Appender.SitecoreLogFileAppender, Sitecore.Logging">
+        <file value="$(dataFolder)/logs/Sitecron.log.{date}.{time}.txt" />
         <appendToFile value="true" />
         <rollingStyle value="Composite" />
         <staticLogFileName value="false" />
