Update: 更改Sitecore log config設定

--- a/src/Project/Wealth/platform/App_Config/Modules/_Xcms.DefaultSettingOverrides/Change.Log4net.config
+++ b/src/Project/Wealth/platform/App_Config/Modules/_Xcms.DefaultSettingOverrides/Change.Log4net.config
@@ -17,13 +17,22 @@
         </layout>
       </appender>
       <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender, Sitecore.Logging">
-        <rollingStyle set:value="Composite" />
-        <staticLogFileName set:value="false" />
-        <datePattern set:value=".yyyyMMdd'.txt'" />
-        <preserveLogFileNameExtension set:value="true" />
+        <patch:attribute name="type">log4net.Appender.SitecoreLogFileAppender, Sitecore.Logging</patch:attribute>
+        <rollingStyle value="Size">
+          <patch:delete />
+        </rollingStyle>
+        <maxSizeRollBackups value="-1">
+          <patch:delete />
+        </maxSizeRollBackups >
+        <maximumFileSize value="10MB">
+          <patch:delete />
+        </maximumFileSize>
         <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern set:value="$(log4netConversionPattern)" />
+          <conversionPattern>
+            <patch:attribute name="value">%4t %d{ISO8601} %-5p %m%n</patch:attribute>
+          </conversionPattern>
         </layout>
+        <encoding value="utf-8"/>
       </appender>
       <appender name="PublishingLogFileAppender" type="log4net.Appender.SitecoreLogFileAppender, Sitecore.Logging">
         <layout type="log4net.Layout.PatternLayout">
