Update : 調整新聞 cache 邏輯、調整 DB 取值邏輯

--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -119,10 +119,10 @@
         <patch:attribute name="value" environment:require="Staging">https://fcbileodev.page.link/?link=https%3A%2F%2Ffcbileodev.page.link%2FFundKYC&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite.apnDEV</patch:attribute>
         <patch:attribute name="value" environment:require="Production">https://fcbileo.page.link/?link=https%3A%2F%2Ffcbileo.page.link%2FFundKYC&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
       </setting>
-      <!-- 頭條新聞、新聞列表、新聞詳細-Cache過期時間-->
-      <setting name="NewsCacheTime" value="30m"/>
-      <!-- 首頁焦點新聞-Cache過期時間-->
-      <setting name="HomeHeadlinesTime" value="1m"/>
+      <!-- 預設新聞列表-Cache過期時間-->
+      <setting name="DefaultNewsCacheTime" value="30m"/>
+      <!-- 查詢新聞列表-Cache過期時間-->
+      <setting name="SerchNewsCacheTime" value="5m"/>
       <!-- 結構型商品列表、結構型商品詳細-Cache過期時間-->
       <setting name="StructuredProductCacheTime" value="30m"/>
       <!-- 首頁搜尋元件-Cache過期時間-->
