新增基金排行API，含人氣、得獎、國內境外績效 排行

--- a/src/Feature/Service/platform/Feature.Wealth.Service.csproj
+++ b/src/Feature/Service/platform/Feature.Wealth.Service.csproj
@@ -10,5 +10,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Foundation\Wealth\platform\Foundation.Wealth.csproj" />
+    <ProjectReference Include="..\..\Component\platform\Feature.Wealth.Component.csproj" />
   </ItemGroup>
 </Project>
