update: 第三方登入每次要求輸入帳密

--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -76,7 +76,7 @@
         <patch:attribute name="value" environment:require="Staging">d495c096d8839ea50ca29d4713bd707e</patch:attribute>
         <patch:attribute name="value" environment:require="Production">de5a8040590ae4b3c0859636b1353658</patch:attribute>
       </setting>
-      <setting name="Facebook.AuthUrl" value="https://www.facebook.com/v19.0/dialog/oauth?client_id={AppId}&amp;redirect_uri={RedirectUrl}&amp;state={state}" />
+      <setting name="Facebook.AuthUrl" value="https://www.facebook.com/v19.0/dialog/oauth?client_id={AppId}&amp;redirect_uri={RedirectUrl}&amp;state={state}&amp;auth_type=reauthenticate&amp;auth_nonce={AuthNonce}" />
       <setting name="Facebook.TokenUrl" value="https://graph.facebook.com/v19.0/oauth/access_token?client_id={AppId}&amp;redirect_uri={RedirectUrl}&amp;client_secret={AppSecret}&amp;code={code}" />
       <setting name="Facebook.ProfileUrl" value="https://graph.facebook.com/v19.0/me?fields=id,name,email" />
       <setting name="Line.ClientId">
@@ -89,7 +89,7 @@
         <patch:attribute name="value" environment:require="Staging">e4aa6c7dd4d61c3c1dcc3cfa65231637</patch:attribute>
         <patch:attribute name="value" environment:require="Production">b5ee994321512fa6dcf85fa8055f9e2c</patch:attribute>
       </setting>
-      <setting name="Line.AuthUrl" value="https://access.line.me/oauth2/v2.1/authorize?scope={scope}&amp;response_type=code&amp;state={state}&amp;redirect_uri={RedirectUrl}&amp;client_id={clientid}"/>
+      <setting name="Line.AuthUrl" value="https://access.line.me/oauth2/v2.1/authorize?scope={scope}&amp;response_type=code&amp;state={state}&amp;redirect_uri={RedirectUrl}&amp;client_id={clientid}&amp;max_age=5"/>
       <setting name="Line.TokenUrl" value="https://api.line.me/oauth2/v2.1/token"/>
       <setting name="Line.ProfileUrl" value="https://api.line.me/v2/profile"/>
       <setting name="Line.VerifyUrl" value="https://api.line.me/oauth2/v2.1/verify"/>
