Update：登出 pipeline 改由其他 processor 處理
- 因登出會重複觸發兩次的情況， 建立新的 Logout Pipeline 配置

--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -2,14 +2,17 @@
   <sitecore>
     <pipelines role:require="Standalone or ContentManagement" environment:require="Local or Staging or Production">
       <speak.logout argsType="Sitecore.Pipelines.Logout.LogoutArgs">
+        <processor type="Feature.Wealth.Account.Pipelines.SignOutTracker, Feature.Wealth.Account" mode="on" />
         <processor type="Feature.Wealth.Account.Pipelines.SingleSignOut, Feature.Wealth.Account" mode="on" />
       </speak.logout>
     </pipelines>
     <processors role:require="Standalone or ContentManagement" environment:require="Local or Staging or Production">
       <logout argsType="Sitecore.Pipelines.Logout.LogoutArgs">
+        <processor patch:before="processor[@type='Sitecore.Pipelines.Logout.GotoLogin, Sitecore.Kernel']" type="Feature.Wealth.Account.Pipelines.SignOutTracker, Feature.Wealth.Account" mode="on" />
         <processor patch:before="processor[@type='Sitecore.Pipelines.Logout.GotoLogin, Sitecore.Kernel']" type="Feature.Wealth.Account.Pipelines.SingleSignOut, Feature.Wealth.Account" mode="on" />
       </logout>
     </processors>
+
     <authoring role:require="Standalone or ContentManagement" environment:require="Local or Staging or Production">
       <graphql>
         <tokenValidator>
@@ -42,16 +45,13 @@
     </sites>
     <pipelines role:require="Standalone or ContentDelivery">
       <mvc.requestBegin>
-        <processor patch:after="processor[@type='Sitecore.Mvc.Analytics.Pipelines.MvcEvents.RequestBegin.StartTracking, Sitecore.Mvc.Analytics']" type="Feature.Wealth.Account.Pipelines.XConnect, Feature.Wealth.Account" resolve="true"/>
+        <processor patch:after="processor[@type='Sitecore.Mvc.Analytics.Pipelines.MvcEvents.RequestBegin.StartTracking, Sitecore.Mvc.Analytics']" type="Feature.Wealth.Account.Pipelines.XConnect, Feature.Wealth.Account" resolve="true" />
       </mvc.requestBegin>
     </pipelines>
     <pipelines role:require="Standalone or ContentManagement">
       <owin.cookieAuthentication.signedIn>
         <processor resolve="true" type="Feature.Wealth.Account.Pipelines.Owin.CookieAuthentication.SignedIn.LoginTracker, Feature.Wealth.Account" patch:after="processor[@type='Sitecore.Owin.Authentication.Pipelines.CookieAuthentication.SignedIn.CleanupUserProfile, Sitecore.Owin.Authentication']" />
       </owin.cookieAuthentication.signedIn>
-      <owin.cookieAuthentication.signOut>
-        <processor resolve="true" type="Feature.Wealth.Account.Pipelines.Owin.CookieAuthentication.SignOut.LogoutTracker, Feature.Wealth.Account" patch:after="processor[@type='Sitecore.Owin.Authentication.Pipelines.CookieAuthentication.SignOut.ClearCache, Sitecore.Owin.Authentication']" />
-      </owin.cookieAuthentication.signOut>
     </pipelines>
     <settings>
       <setting name="Authentication.ClientSessionTimeout">
@@ -66,7 +66,7 @@
         <patch:attribute name="value" environment:require="Development">true</patch:attribute>
       </setting>
       <!--第三方登入資訊-->
-      <setting name="Facebook.AppId" >
+      <setting name="Facebook.AppId">
         <patch:attribute name="value" environment:require="Local or Development">1141789380446473</patch:attribute>
         <patch:attribute name="value" environment:require="Staging">2209337179431272</patch:attribute>
         <patch:attribute name="value" environment:require="Production">472848741837981</patch:attribute>
@@ -89,10 +89,10 @@
         <patch:attribute name="value" environment:require="Staging">e4aa6c7dd4d61c3c1dcc3cfa65231637</patch:attribute>
         <patch:attribute name="value" environment:require="Production">b5ee994321512fa6dcf85fa8055f9e2c</patch:attribute>
       </setting>
-      <setting name="Line.AuthUrl" value="https://access.line.me/oauth2/v2.1/authorize?scope={scope}&amp;response_type=code&amp;state={state}&amp;redirect_uri={RedirectUrl}&amp;client_id={clientid}&amp;max_age=5"/>
-      <setting name="Line.TokenUrl" value="https://api.line.me/oauth2/v2.1/token"/>
-      <setting name="Line.ProfileUrl" value="https://api.line.me/v2/profile"/>
-      <setting name="Line.VerifyUrl" value="https://api.line.me/oauth2/v2.1/verify"/>
+      <setting name="Line.AuthUrl" value="https://access.line.me/oauth2/v2.1/authorize?scope={scope}&amp;response_type=code&amp;state={state}&amp;redirect_uri={RedirectUrl}&amp;client_id={clientid}&amp;max_age=5" />
+      <setting name="Line.TokenUrl" value="https://api.line.me/oauth2/v2.1/token" />
+      <setting name="Line.ProfileUrl" value="https://api.line.me/v2/profile" />
+      <setting name="Line.VerifyUrl" value="https://api.line.me/oauth2/v2.1/verify" />
       <!--一銀網銀登入AppAay資訊-->
       <setting name="AppPay.Id">
         <patch:attribute name="value" environment:require="Local or Development or Staging">WEALTH</patch:attribute>
@@ -115,14 +115,14 @@
       <!--第e行動&&iLeo登入deeplink-->
       <setting name="MobileFirste" value="https://fcblink.page.link/?link=https%3A%2F%2Ffcblink.page.link%2FI11%3Fchannel%3Dwms%26returnUrl%3Dwww.google.com.tw&amp;apn=com.willmobile.mobilebank.fcb&amp;isi=408289025&amp;ibi=com.firstbank.mbank">
       </setting>
-      <setting name="MobileIleo" >
+      <setting name="MobileIleo">
         <patch:attribute name="value" environment:require="Local or Development or Staging">https://fcbileodev.page.link/?link=https://fcbileodev.page.link/FundTrackList?channel%3Dwms%26returnUrl%3D&amp;apn=com.firstbank.mbanklite.debug&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite.apnDEV</patch:attribute>
         <patch:attribute name="value" environment:require="Production">https://fcbileo.page.link/?link=https://fcbileo.page.link/FundTrackList?channel%3Dwms%26returnUrl%3D&amp;apn=com.firstbank.mbanklite&amp;isi=1446229166&amp;ibi=com.firstbank.mbankForLite</patch:attribute>
       </setting>
       <!--壓力測試使用 ID-->
-      <setting name="StressTestId" value="A1231231230"/>
+      <setting name="StressTestId" value="A1231231230" />
       <!--AppPay登入交易過程限時 分鐘-->
-      <setting name="LoginTansactionLimit" value="10"/>
+      <setting name="LoginTansactionLimit" value="10" />
     </settings>
   </sitecore>
 </configuration>
