--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -102,8 +102,8 @@
       </setting>
       <!--關注清單api-->
       <setting name="FocusApiRoute">
-        <patch:attribute name="value" environment:require="Staging">https://mbankTest.firstbank.com.tw/fbp/MBankTxnLiteFTL.action</patch:attribute>
-        <patch:attribute name="value" environment:require="Production">https://mbank.firstbank.com.tw/fbp/MBankTxnLiteFTL.action</patch:attribute>
+        <patch:attribute name="value" environment:require="Staging">https://mbankTest.firstbank.com.tw:8443/fbp/MBankTxnLiteFTL.action</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">https://mbank.firstbank.com.tw:8443/fbp/MBankTxnLiteFTL.action</patch:attribute>
       </setting>
       <!--風險評估route 第e個網-->
       <setting name="WebKYC">
