調整登出 (logout) 的管道 (processors) 配置

--- a/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
+++ b/src/Feature/Account/platform/App_Config/Include/Feature/Feature.Wealth.Account/Feature.Wealth.Account.config
@@ -1,14 +1,23 @@
 ﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/" xmlns:role="http://www.sitecore.net/xmlconfig/role/" xmlns:environment="http://www.sitecore.net/xmlconfig/environment/">
   <sitecore>
-    <pipelines role:require="Standalone or ContentManagement" environment:require="Local or Staging or Production">
+    <pipelines role:require="Standalone or ContentManagement">
       <speak.logout argsType="Sitecore.Pipelines.Logout.LogoutArgs">
         <processor type="Feature.Wealth.Account.Pipelines.SignOutTracker, Feature.Wealth.Account" mode="on" />
+      </speak.logout>
+    </pipelines>
+    <processors role:require="Standalone or ContentManagement">
+      <logout argsType="Sitecore.Pipelines.Logout.LogoutArgs">
+        <processor patch:before="processor[@type='Sitecore.Pipelines.Logout.GotoLogin, Sitecore.Kernel']" type="Feature.Wealth.Account.Pipelines.SignOutTracker, Feature.Wealth.Account" mode="on" />
+      </logout>
+    </processors>
+    
+    <pipelines role:require="Standalone or ContentManagement" environment:require="Local or Staging or Production">
+      <speak.logout argsType="Sitecore.Pipelines.Logout.LogoutArgs">
         <processor type="Feature.Wealth.Account.Pipelines.SingleSignOut, Feature.Wealth.Account" mode="on" />
       </speak.logout>
     </pipelines>
     <processors role:require="Standalone or ContentManagement" environment:require="Local or Staging or Production">
       <logout argsType="Sitecore.Pipelines.Logout.LogoutArgs">
-        <processor patch:before="processor[@type='Sitecore.Pipelines.Logout.GotoLogin, Sitecore.Kernel']" type="Feature.Wealth.Account.Pipelines.SignOutTracker, Feature.Wealth.Account" mode="on" />
         <processor patch:before="processor[@type='Sitecore.Pipelines.Logout.GotoLogin, Sitecore.Kernel']" type="Feature.Wealth.Account.Pipelines.SingleSignOut, Feature.Wealth.Account" mode="on" />
       </logout>
     </processors>
